<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginActivity"
    >
    
    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/flogin"
        style="@style/TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/TextView"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Tit_email"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login_email"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">
        
        <EditText
            android:id="@+id/Tei_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/border_layout_login"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Tit_pass"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_password"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/Tit_email">

        <EditText
            android:id="@+id/Tei_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:background="@drawable/border_layout_login"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <TextView-->
<!--        android:id="@+id/lupaSandi"-->
<!--        style="@style/ForgotPassword"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Lupa Sandi ..?"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/Tit_pass"-->
<!--        android:layout_marginLeft="210dp"-->
<!--        />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/btn_klik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tit_pass"
        tools:ignore="TextSizeCheck" />
<!--    <TextView-->
<!--        android:id="@+id/log_reg"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/subTitle"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/tidak_ada_akun"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_login"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>