<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/img_reg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_reg"
        style="@style/TextView"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_reg" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/Tit_user"-->
<!--        style="@style/TextInputLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:hint="@string/username"-->
<!--        app:startIconDrawable="@drawable/person_emil"-->
<!--        android:layout_marginHorizontal="24dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_login">-->

<!--        <EditText-->
<!--            android:id="@+id/Tei_user"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPersonName"-->
<!--            android:background="@drawable/border_layout_login"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/Tit_kelas"-->
<!--        style="@style/TextInputLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:hint="@string/Kelas"-->
<!--        app:startIconDrawable="@drawable/person_emil"-->
<!--        android:layout_marginHorizontal="24dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_login">-->

<!--        <EditText-->
<!--            android:id="@+id/Tei_kelas"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPersonName"-->
<!--            android:background="@drawable/border_layout_login"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Tit_email"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/login_email"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <EditText
            android:id="@+id/Tei_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/border_layout_login"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Tit_pass"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/pass"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Tit_email">

        <EditText
            android:id="@+id/Tei_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/border_layout_login"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Tit_ConfPass"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Confirm password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/pass"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Tit_pass">

        <EditText
            android:id="@+id/Tei_ConfPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/border_layout_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        style="@style/btn_klik"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tit_ConfPass" />

    <TextView
        android:id="@+id/log_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subTitle"
        android:layout_marginTop="10dp"
        android:text="@string/Punya_akun"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_Reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>